fix(form): Tooltips are too narrow as selector >>> selector doesn't work with SASS
fixes #660

--- a/src/app/common/ui-patternfly/syndesis-form-control.scss
+++ b/src/app/common/ui-patternfly/syndesis-form-control.scss
@@ -1,4 +1,4 @@
-:host >>> .tooltip-inner {
+:host /deep/ .tooltip-inner {
   min-width: 200px;
   word-wrap: break-word;
 }
